added logo to config

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: mglnk shortener 
 description: mglnk Link Shortener 
-logo: /assets/img/logo.png
+logo: /assets/img/M-and-G_colored-rotated.png
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
