--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: mglnk Link Shortener
 logo: /assets/img/M-and-G_colored-rotated.png
 show_downloads: true
 google_analytics:
-theme: jekyll-theme-minimal
+theme: athene
 
 permalink: /:slug/
 
